events app project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abimael10.github.io/react-portfolio",
+  "homepage": "https://studmuffin.tech",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
