--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://studmuffin.tech",
+  "homepage": "http://www.juansantos.website/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
